[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grpy-dev-tools"
version = "0.1.0"
description = "Development tools for Python projects"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "Flake8-pyproject>=1.2.3",
    "pre-commit>=3.0.5",
    "pydantic>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/grpy/dev_tools"]

[tool.hatch.build]
dev-mode-exact = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
    exclude = ".venv"
    max-complexity = 10
    max-line-length = 100
    extend-ignore = """
        W503,
        E203,
        E701,
    """
    per-file-ignores = """
        __init__.py: F401
        ./src/*: E402
    """